deployment/preprod/api/dep-apirest-preprod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-apirest-preprod
  namespace: ns-2024-sae5-y11
  labels:
    app: apirest-preprod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apirest-preprod
  template:
    metadata:
      labels:
        app: apirest-preprod
    spec:
      volumes:
      - name: vol-static-content-preprod
      containers:
      - name: container-nginx-preprod
        image: forge-registry.iut-larochelle.fr/ns-2024-sae5-y11/preprod/img-nginx-apirest-muzedex:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: vol-static-content-preprod
      - name: container-apirest-preprod
        image: forge-registry.iut-larochelle.fr/ns-2024-sae5-y11/preprod/img-php-apirest-muzedex:latest
        ports:
        - containerPort: 9000
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: vol-static-content-preprod
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "cd /app/muzedex_api && composer update && php bin/console doctrine:migrations:migrate --no-interaction && php bin/console doctrine:fixtures:load --no-interaction && cp -r /app/muzedex_api /usr/share/nginx/html/muzedex_api && chmod -R 777 /usr/share/nginx/html/muzedex_api/var"]
      - name: container-database-preprod
        image: forge-registry.iut-larochelle.fr/mariadb/mariadb-10.10.2
        ports:
        - containerPort: 3306
